Add RoCrateConformsToIdProvider interface